TODO

Tools
* nk2export
* Create
* nk2info
* print amount of items

Deployment:
* create debian package files
* update macosx package files
* update msvcpp files (implement libbfio)

20090132
* Worked on initial version
* Added item functions

20090129
* Worked on initial version
* Changed item separator to item value entries

20090128
* Created initial version based on lipff for the library structure and common code
