@@ -41,15 +41,15 @@ enum LIBNK2_CODEPAGES
 	LIBNK2_CODEPAGE_WINDOWS_1258			= 1258
 };
 
-#define LIBNK2_CODEPAGE_WINDOWS_CENTRAL_EUROPEAN	LIBNK2_CODEPAGE_WINDOWS_1250
-#define LIBNK2_CODEPAGE_WINDOWS_CYRILLIC		LIBNK2_CODEPAGE_WINDOWS_1251
-#define LIBNK2_CODEPAGE_WINDOWS_WESTERN_EUROPEAN	LIBNK2_CODEPAGE_WINDOWS_1252
-#define LIBNK2_CODEPAGE_WINDOWS_GREEK			LIBNK2_CODEPAGE_WINDOWS_1253
-#define LIBNK2_CODEPAGE_WINDOWS_TURKISH			LIBNK2_CODEPAGE_WINDOWS_1254
-#define LIBNK2_CODEPAGE_WINDOWS_HEBREW			LIBNK2_CODEPAGE_WINDOWS_1255
-#define LIBNK2_CODEPAGE_WINDOWS_ARABIC			LIBNK2_CODEPAGE_WINDOWS_1256
-#define LIBNK2_CODEPAGE_WINDOWS_BALTIC			LIBNK2_CODEPAGE_WINDOWS_1257
-#define LIBNK2_CODEPAGE_WINDOWS_VIETNAMESE		LIBNK2_CODEPAGE_WINDOWS_1258
+#define LIBNK2_CODEPAGE_WINDOWS_CENTRAL_EUROPEAN	LIBPFF_CODEPAGE_WINDOWS_1250
+#define LIBNK2_CODEPAGE_WINDOWS_CYRILLIC		LIBPFF_CODEPAGE_WINDOWS_1251
+#define LIBNK2_CODEPAGE_WINDOWS_WESTERN_EUROPEAN	LIBPFF_CODEPAGE_WINDOWS_1252
+#define LIBNK2_CODEPAGE_WINDOWS_GREEK			LIBPFF_CODEPAGE_WINDOWS_1253
+#define LIBNK2_CODEPAGE_WINDOWS_TURKISH			LIBPFF_CODEPAGE_WINDOWS_1254
+#define LIBNK2_CODEPAGE_WINDOWS_HEBREW			LIBPFF_CODEPAGE_WINDOWS_1255
+#define LIBNK2_CODEPAGE_WINDOWS_ARABIC			LIBPFF_CODEPAGE_WINDOWS_1256
+#define LIBNK2_CODEPAGE_WINDOWS_BALTIC			LIBPFF_CODEPAGE_WINDOWS_1257
+#define LIBNK2_CODEPAGE_WINDOWS_VIETNAMESE		LIBPFF_CODEPAGE_WINDOWS_1258
 
 #endif
 
