@@ -1,7 +1,5 @@
 EXTRA_DIST = \
-	nk2export/nk2export.vcproj \
 	nk2info/nk2info.vcproj \
-	nk2recover/nk2recover.vcproj \
 	liberror/liberror.vcproj \
 	libnk2_dll/libnk2_dll.vcproj \
 	libuna/libuna.vcproj \
